Kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: stock-ticker-deployment
  labels:
    app: stocker-ticker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-ticker
  template:
    metadata:
      labels:
        app: stock-ticker
    spec:
      containers:
      - name: stock-ticker
        image: alphakappa/stockticker:latest
---

kind: Service
apiVersion: v1
metadata:
  name: stock-ticker-service
spec:
  selector:
    app: stock-ticker
  ports:
    - port: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-ticker-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: stock-ticker-ingress
  rules:
  - http:
      paths:
      - path: /stockticker
        pathType: Prefix
        backend:
          service:
            name: stock-ticker-service
            port:
              number: 80

# Reilience:
# The StockTicker binary should not be built manually.
# Instead, it should be step one in a multi-stage build
# dockerfile.

# Output from the pod is currently just returned as
# stdut. Ideally, this would be returned via a UI or
# something that better fits the need. Doing so
# would also better utilize the Service and Ingress
# that are created.

# Spitting out data into a UI or queue would also
# allow for easier monitoring.

# This deployment, as it stands, is better suited to be
# a Pod that only runs once.

# The Golang project is fragile, error handling
# should be handled better and should not stop the
# application.

# The API key should be auto generated and a check
# should be in place for key validity.

# This application would not be difficult to scale
# horizontally.
